@@ -1,3 +1,13 @@
+2006-03-14  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsBSDDB.py (update_empty,update_real): Add
+	functions for updating the display;
+	(gramps_upgrade): Set up display updaters;
+	(gramps_upgrade_9): Reflect progess of db upgrade.
+	(low_level_9): Return status and length of the db.
+	(_table_low_level_9): Return table length if successful.
+	* src/ViewManager.py (post_load): Remove database upgrade, since
+	db.load takes care of upgrade.
+
 2006-03-13  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib/_NoteBase.py (NoteBase.serialize): Work out the case
 	of note being None -- leftover from gramps20.
